<resources>
    <string name="app_name">Psychogram</string>
    <string name="sign">или авторизоваться</string>
    <string name="client">Клиент</string>
    <string name="doctor">Психолог</string>
    <string name="preview">Добро пожаловать в место, где собираются лучшие психологи</string>
    <string name="registr">Зарегистрироватся</string>
    <string name="nickname">Логин</string>
    <string name="password">Пароль</string>
    <string name="auto_sign">Автоматический вход</string>
    <string name="save_in_preferences">Сохранить пользователя</string>
    <string name="sign_in">Войти</string>
    <string name="without_internet_access">Нет доступа к сети!</string>
    <string name="connecting_to_server">"Подключение к серверу … "</string>
    <string name="password_incorrect">Неверный пароль!</string>
    <string name="connecting_error">Ошибка подключение!</string>
    <string name="user_not_found">Пользователя не найдено!</string>
    <string name="registration_was_succesful">Регистрация прошла успешно!</string>
    <string name="login_is_busy">Логин занят!</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="interest">Интересы</string>
    <string name="place_of_work">Место работы</string>
    <string name="university">Университет</string>
    <string name="specialization">Специализация</string>
    <string name="competences">Компетенции</string>
    <string name="direction_of_work">Направление работы</string>
    <string name="age">Возвраст</string>
    <string name="registration_new_doctor">Регистрация нового психолога</string>
    <string name="fill_the_field">Заполните поле!</string>
    <string name="answer_all_quest">Ответьте на все вопросы!</string>
    <string name="unpossible_registred">Ошибка при регистрации!</string>
    <string name="my_clients">Мои клиенты</string>
    <string name="cabinet">Кабинет</string>
    <string name="clients_history">История клиентов</string>
    <string name="psychodiagnostika">Психодиагностика</string>
    <string name="online_help">Онлайн поддержка</string>
    <string name="information_about_me">Информация обо мне</string>
    <string name="first_help">Аптечка первой помощи</string>
    <string name="friends_from_work">Друзья проф.сообщества</string>
    <string name="settings">Настройки</string>
    <string name="current_clients">Текущие клиенты</string>
    <string name="potencial_clients">Потенциальные клиенты</string>
    <string name="profile">Профиль</string>
    <string name="delete">Удалить</string>
    <string name="agree">Подтвердить</string>
    <string name="agreed">Подтвердженно</string>
    <string name="deleted">Удалено</string>
    <string name="title_activity_communication">Онлайн поддержка</string>
    <string name="sender">Отправитель:</string>
    <string name="send">Отправить</string>
    <string name="title_activity_friend">Друзья</string>
    <string name="friends">Друзья</string>
    <string name="input_request">Заявки</string>
    <string name="title_activity_my_client">Клиенты</string>
    <string name="output_request">Исходные заявки</string>
    <string name="find_doctor">Поиск психолога</string>
    <string name="who_is_online">Кто сейчас онлайн</string>
    <string name="everybook">Дневник</string>
    <string name="anketa">Анкета</string>
    <string name="doctor_rules">Кодекс психолога</string>
    <string name="title_activity_journal">Дневник</string>
    <string name="what_is_your_name">1.\tКак Вас зовут</string>
    <string name="do_you_like_your_name">2.\tНравится ли Вам ваше имя</string>
    <string name="your_old">3.\tВаш возраст</string>
    <string name="old_feel">4.\tА внутренне насколько лет себя ощущаете лет</string>
    <string name="your_education">5.\tКакое у вас образование</string>
    <string name="problem_with_health">6.\tЕсть ли проблемы со здоровьем у Вас. Пьете ли лекарства</string>
    <string name="think_about_yourself">7(1).\tЧто вы о себе думаете?</string>
    <string name="people_think_about_you">7(2).\tКак вы считаете, что другие думают о Вас?</string>
    <string name="why_you_visit_the_doctor">8.\tПо какой причине вы решили посетить психолога?</string>
    <string name="skills_how_result">9.\tЧто хотите получить, как результат работы с психологом? (цели)</string>
    <string name="your_family">10.\tОпишите подробно Вашу семью. Постарайтесь описать максимально подробно.</string>
    <string name="revelations_with_friends">11(1).\tОпишите Ваши отношения: с друзьями</string>
    <string name="revelations_with_sex">11(2).\tОпишите Ваши отношения: с противоположным полом</string>
    <string name="do_you_have_family">12.\tВы состоите в супружеском союзе. У Вас есть дети?</string>
    <string name="your_hobby">13.\tОпишите Ваше хобби</string>
    <string name="gold_in_this_life">14.\tЧто для Вас ценно в этой жизни</string>
    <string name="think_in_life">15.\tНазовите ПЯТЬ самых неприемлемых для Вас вещей (качеств) в мире (в людях)</string>
    <string name="message_to_world">16.\tВаше сообщение миру сейчас - отвечайте сходу (на выдохе) и искренне</string>
    <string name="bad_do">17.\tИмеете ли Вы тягу к спиртному, курению, к психоактивным веществам</string>
    <string name="bad_psychical">18.\t.Есть ли у Вас какие-нибудь психические расстройства. Если да, то какие?</string>
    <string name="experience_with_doctor">19.\t.Был ли опыт работы с психологом раньше, какой именно, какие результаты получили, достигли ли цели?</string>
    <string name="main_info">20.\t.Возможно есть ещё что-то важное, чтоб вы хотели сообщить</string>
    <string name="back">Назад</string>
    <string name="forward">Вперед</string>
    <string name="questionnaire_refreshed">Анкету оновлено!</string>
    <string name="questionnaire_error">Ошибка при оновление анкеты!</string>
    <string name="search">Искать</string>
    <string name="komp1">Семейная психотерапия</string>
    <string name="komp2">Психологическая помощь при разводах</string>
    <string name="komp3">Детский психолог (психотерапевт)</string>
    <string name="komp4">Герантология</string>
    <string name="komp5">Психодиагностика</string>
    <string name="komp6">Бизнес-консультирование</string>
    <string name="komp7">Оценка персонала</string>
    <string name="komp8">Психолог в службе образование</string>
    <string name="komp9">Оценка профессиональной пригодности</string>
    <string name="komp10">Индивидуальное консультирование</string>
    <string name="komp11">Работа с людьми с ограниченными возможностями</string>
    <string name="komp12">Клиническая практика (работа с зависимостями)</string>
    <string name="comp1">Чтение</string>
    <string name="comp2">Общение</string>
    <string name="comp3">Коллекционирование</string>
    <string name="comp4">Спорт</string>
    <string name="comp5">Сканворды и кроссворды</string>
    <string name="comp6">Компьютерные игры</string>
    <string name="comp7">Азартные игры</string>
    <string name="comp8">Музыка</string>
    <string name="comp9">Кино</string>
    <string name="comp10">Автомобили и мотоциклы</string>
    <string name="comp11">Интернет</string>
    <string name="comp12">Фотосъемка</string>
    <string name="comp13">Нумизматика</string>
    <string name="comp14">Живопись</string>
    <string name="comp15">Писательская деятельность</string>
    <string name="comp16">Фелинология</string>
    <string name="comp17">Астрология</string>
    <string name="comp18">Психология</string>
    <string name="comp19">Стенография</string>
    <string name="comp20">Дизайн</string>
    <string name="comp21">Модельные бизнес</string>
    <string name="comp22">Кулинария</string>
    <string name="comp23">Паркур</string>
    <string name="comp24">Хореография</string>
    <string name="comp25">Програмирование</string>
    <string name="comp26">Компьютеры</string>
    <string-array name="interes_array">
        <item> Семейная психотерапия</item>
        <item>Психологическая помощь при разводах</item>
        <item>Детский психолог (психотерапевт)</item>
        <item>Герантология</item>
        <item>Психодиагностика</item>
        <item>Бизнес-консультирование</item>
        <item>Оценка персонала</item>
        <item>Психолог в службе образование</item>
        <item>Оценка профессиональной пригодности</item>
        <item>Индивидуальное консультирование</item>
        <item>Работа с людьми с ограниченными возможностями</item>
        <item>Клиническая практика (работа с зависимостями)</item>
    </string-array>
    <string name="inter1">Психоанализ</string>
    <string name="inter2">Когнитивно-бихевиоральное терапия</string>
    <string name="inter3">Семейные расстановки по Берту Хеллингеру</string>
    <string name="inter4">Системно-векторная психология</string>
    <string name="inter5">Экспериментальная психология</string>
    <string name="inter6">Гуманистическая психология</string>
    <string name="inter7">Гештальтппсихология Фрица Перлза</string>
    <string name="inter8">Экзистенциальная психотерапия</string>
    <string name="birthday">Дата рождение</string>
    <string name="do_you_consultation">Вам нужна консультация?</string>
    <string name="yes_preview">ДА</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_i_doctor">Нет, я психолог</string>
    <string name="experience">Стаж</string>
    <string name="prof_competence">Профессиональные компетенции</string>
    <string name="prof_interest">Професиональные интересы</string>
    <string name="man">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="registration_new_user">Регистрация нового пользователя</string>
    <string name="test1">16-факторный личностный опросник</string>
    <string name="test2">Индивидуально-типологический опросник</string>
    <string name="test3">Личностный опросник Айзенка</string>
    <string name="test4">Методика диагностики межличностных отношений Лири</string>
    <string name="test5">Методика исследования самоотношения</string>
    <string name="test6">Модифицированная форма B опросника FPI</string>
    <string name="test7">Опросник Шмишека</string>
    <string name="test8">Тест Рокича Ценностные ориентации</string>
    <string name="test9">Шкала депрессии Бека</string>
    <string name="question_number">Вопрос #</string>
    <string name="psychogram">Psychogram©</string>
    <string name="director">Кравчик Константин</string>
    <string name="site">Opensocium.net</string>
</resources>