<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.main.registration.RegistrationClientActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textSize="22sp"
            android:text="@string/registration_new_user"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginRegIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/loginRegistr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nickname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordRegIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/passwordRegistr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/container_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_man"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/man"
            android:layout_height="wrap_content"
            android:background="@color/background_item_menu"/>

        <Button
            android:id="@+id/btn_woman"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/woman"
            android:layout_height="wrap_content"
            android:background="@color/background_item_menu" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/birthday"
        android:background="@color/background_item_menu"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameRegIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/nameRegistr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/surnameRegIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <EditText
                android:id="@+id/surnameRegistr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/surname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/countryRegIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <EditText
                android:id="@+id/countryRegistr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/country" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cityRegIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <EditText
                android:id="@+id/cityRegistr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/city" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"/>

        <CheckBox
            android:id="@+id/komp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp1"/>
        <CheckBox
            android:id="@+id/komp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp2" />
        <CheckBox
            android:id="@+id/komp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp3" />
        <CheckBox
            android:id="@+id/komp4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp4" />
        <CheckBox
            android:id="@+id/komp5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp5" />
        <CheckBox
            android:id="@+id/komp6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp6" />
        <CheckBox
            android:id="@+id/komp7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp7" />
        <CheckBox
            android:id="@+id/komp8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp8" />
        <CheckBox
            android:id="@+id/komp9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp9" />
        <CheckBox
            android:id="@+id/komp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp10" />
        <CheckBox
            android:id="@+id/komp11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp11"/>
        <CheckBox
            android:id="@+id/komp12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp12"/>
        <CheckBox
            android:id="@+id/komp13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp13"/>
        <CheckBox
            android:id="@+id/komp14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp14"/>
        <CheckBox
            android:id="@+id/komp15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp15"/>
        <CheckBox
            android:id="@+id/komp16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp16"/>
        <CheckBox
            android:id="@+id/komp17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp17"/>
        <CheckBox
            android:id="@+id/komp18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp18"/>
        <CheckBox
            android:id="@+id/komp19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp19"/>
        <CheckBox
            android:id="@+id/komp20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp20"/>
        <CheckBox
            android:id="@+id/komp21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp21"/>
        <CheckBox
            android:id="@+id/komp22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp22"/>
        <CheckBox
            android:id="@+id/komp23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp23"/>
        <CheckBox
            android:id="@+id/komp24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp24"/>
        <CheckBox
            android:id="@+id/komp25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp25"/>
        <CheckBox
            android:id="@+id/komp26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp26"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegistr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registr"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</ScrollView>
