<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_type"
    tools:context=".Activity.main.authornization.SelectTypeActivity">

    <com.project.samuliak.psychogram.Util.TextViewPlus
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textSize="18sp"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        foo:customFont="fonts/MyriadProRegular.ttf"/>

    <com.project.samuliak.psychogram.Util.TextViewPlus
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_consultation"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:visibility="invisible"
        foo:customFont="fonts/MyriadProRegular.ttf"/>

    <RelativeLayout
        android:id="@+id/linear_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/btn"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <com.project.samuliak.psychogram.Util.TextViewPlus
            android:id="@+id/text_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/yes_preview"
            android:textSize="25sp"
            android:textColor="@color/white"
            foo:customFont="fonts/MyriadProRegular.ttf"/>

    </RelativeLayout>


    <com.project.samuliak.psychogram.Util.TextViewPlus
        android:id="@+id/doctor_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_i_doctor"
        android:layout_below="@id/linear_client"
        android:textSize="18sp"
        android:layout_marginTop="45dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:visibility="invisible"
        foo:customFont="fonts/MyriadProRegular.ttf"/>

    <com.project.samuliak.psychogram.Util.TextViewPlus
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psychogram"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/white"
        foo:customFont="fonts/MyriadProRegular.ttf"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <com.project.samuliak.psychogram.Util.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textSize="12sp"
            android:textColor="@color/white"
            foo:customFont="fonts/MyriadProRegular.ttf"/>

        <com.project.samuliak.psychogram.Util.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:textSize="12sp"
            android:textColor="@color/white"
            foo:customFont="fonts/MyriadProRegular.ttf"/>

    </LinearLayout>

</RelativeLayout>
